Colaboratory를 통해 생성됨

--- a/TextAnalysis_class02_preknowledge.ipynb
+++ b/TextAnalysis_class02_preknowledge.ipynb
@@ -66,7 +66,6 @@
       "source": [
         "## Q. 컴퓨터에게 텍스트 단위(글이나 문장)를 어떤 형태로 전달해야 분석에 활용할 수 있을까?\n",
         "\n",
-        "![image.png](attachment:image.png)\n",
         "\n",
         "### 컴퓨터가 텍스트를 이해하는 방법 => 벡터화\n",
         "\n",
@@ -77,11 +76,7 @@
         "### 텍스트 단위를 행렬로 표현 하는 형태 => 카운트 기반 행렬(DTM - Document Term Matrix)\n",
         "- 보편적으로 텍스트마이닝 분야에선 문서별로 각 단어에 대한 '빈도' 또는 '유사한 수치'를 활용해서 표현\n",
         "- 행: 문서의 고유번호(index)를 통해 문서를 구분 (document)\n",
-        "- 열: 문서에 등장하는 단어의 종류를 구분 (term). 모든 문서의 모든 단어가 쭉 나열됨\n",
-        "\n",
-        "### \n",
-        "### 예시)\n",
-        "![image-3.png](attachment:image-3.png)"
+        "- 열: 문서에 등장하는 단어의 종류를 구분 (term). 모든 문서의 모든 단어가 쭉 나열됨\n"
       ]
     },
     {
@@ -1739,8 +1734,6 @@
         "- idf(t) : df(t)에 반비례 하는 수. 즉 df(t)에 대한 역수를 계산할 수 았게 해줌\n",
         "\n",
         "\n",
-        "![image-4.png](attachment:image-4.png)\n",
-        "\n",
         "\n",
         "<br><br>\n",
         "- 각 문헌에서 다뤄지는 일반명사의 경우, 한 문서에서 여러번 등장하며, 다른 문헌에서도 동일하게 여러번 등장하는 경향이 있음 \n",
@@ -1748,24 +1741,6 @@
         "- 각 문헌의 핵심 주제어들의 경우, 한 문헌에선 여러번 등장하지만, 그 주제를 다루지 않은 문헌의 경우 거의 등장하지 않음\n",
         "    <br> => tfidf 수치가 소폭 낮아짐\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "p2WFt2wvA--e"
-      },
-      "source": [
-        "![ex.PNG](attachment:ex.PNG)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Y2l99horA--f"
-      },
-      "source": [
-        "![tfidf.PNG](attachment:tfidf.PNG)"
       ]
     },
     {
@@ -2674,8 +2649,6 @@
         "\n",
         "##### 예시\n",
         "주어진 문장: An adorable little boy is spreading smiles\n",
-        "\n",
-        "![image-2.png](attachment:image-2.png)\n",
         "\n",
         "<br> 단어를 기반으로 접근하는 경우, 문장 내에서의 단어의 순서를 반영할 수 없음\n",
         "<br> 단어 하나로 봤을 때, 온전한 의미를 전달할 수 없는 경우가 있음. 이를 극복할 수 있게 해줌 (ex. 정책 => 통신 정책, 경제 => 경제 구조)\n"
@@ -3797,59 +3770,6 @@
         "compare_keywords = pd.DataFrame(zip(cv_keywords_list, tfidf_keywords_list), columns=['빈도수 기반 키워드', 'Tfidf 기반 키워드'] )\n",
         "compare_keywords"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YNErEWkzA--x"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NuhyGKnwA--x"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "-0C446YPA--y"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yWDaWiP3A--z"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WUXYp57JA--z"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
     }
   ],
   "metadata": {
@@ -3873,6 +3793,7 @@
     "colab": {
       "name": "TextAnalysis_class02_preknowledge.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
